fix: fix filter styles on mobile

--- a/frontend/components/DocumentListController/DocumentListController.css
+++ b/frontend/components/DocumentListController/DocumentListController.css
@@ -1,9 +1,14 @@
 .wrapper {
+  background-image: linear-gradient(-180deg, #0b131f 10%, #17273f 100%);
   border-top: 1px solid #282f39;
-  background-image: linear-gradient(-180deg, #0b131f 10%, #17273f 100%); 
   display: flex;
   padding: 15px 20px;
-  align-items: center
+}
+
+@media (--breakpoint-medium) {
+  .wrapper {
+    align-items: center;
+  }
 }
 
 .actions {
